<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdropPosterImage"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/this_is_backdrop_poster"
            app:layout_constraintBottom_toBottomOf="@id/backdropGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/mv_backdrop_marlina" />

        <androidx.cardview.widget.CardView
            android:id="@+id/posterCv"
            android:layout_width="@dimen/width_cv"
            android:layout_height="@dimen/height_cv"
            android:layout_marginStart="@dimen/half_margin"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/backdropGuideline"
            app:layout_constraintTop_toBottomOf="@id/backdropGuideline">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/this_is_a_poster"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                tools:src="@drawable/mv_marlina" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/backdropGuideline"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/movieRelaseDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/may_15_2017"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/posterCv"
            app:layout_constraintTop_toBottomOf="@id/backdropGuideline"/>

        <TextView
            android:id="@+id/backSlashTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backslash_symbol"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/movieRelaseDateTv"
            app:layout_constraintTop_toBottomOf="@id/backdropGuideline"/>

        <TextView
            android:id="@+id/movieDurationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/one_h_33m"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/backSlashTv"
            app:layout_constraintTop_toBottomOf="@id/backdropGuideline"/>


        <TextView
            android:id="@+id/movieOriginalLanguageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/posterCv"
            app:layout_constraintStart_toEndOf="@id/posterCv"
            app:layout_constraintTop_toBottomOf="@id/movieRelaseDateTv"
            tools:text="Indonesian" />

        <TextView
            android:id="@+id/backSlash2Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/backslash_symbol"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/posterCv"
            app:layout_constraintStart_toEndOf="@id/movieOriginalLanguageTv"
            app:layout_constraintTop_toBottomOf="@id/backSlashTv" />

        <ImageView
            android:id="@+id/starImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:src="@drawable/ic_baseline_star"
            app:layout_constraintBottom_toBottomOf="@+id/posterCv"
            app:layout_constraintStart_toEndOf="@id/backSlash2Tv"
            app:layout_constraintTop_toBottomOf="@id/movieDurationTv"
            android:contentDescription="@string/this_is_star_image" />

        <TextView
            android:id="@+id/movieRatingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/posterCv"
            app:layout_constraintStart_toEndOf="@id/starImage"
            app:layout_constraintTop_toBottomOf="@id/movieDurationTv"
            tools:text="@string/seventy_one_percent" />

        <TextView
            android:id="@+id/movieNameTv"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            tools:text="Marlina the Murderer in Four Acts"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterCv"/>

        <TextView
            android:id="@+id/genreTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieNameTv"/>

        <TextView
            android:id="@+id/movieGenreTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/thriller_drama_western"
            android:textSize="@dimen/text_size_16"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/genreTv"
            app:layout_constraintTop_toBottomOf="@id/movieNameTv"/>

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreTv"/>

        <TextView
            android:id="@+id/movieDescriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding"
            android:layout_marginTop="@dimen/half_margin"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTv"
            tools:text="@string/desc_marlina" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>