<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/card_elevation"
    android:layout_margin="@dimen/half_margin"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:contentDescription="@string/this_is_a_poster"
            tools:src="@drawable/mv_marlina"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/movieNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            android:maxLines="2"
            android:textSize="@dimen/text_size_16"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/posterImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/marlina" />

        <TextView
            android:id="@+id/movieRelaseDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/may_15_2017"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/posterImage"
            app:layout_constraintTop_toBottomOf="@id/movieNameTv"/>

        <TextView
            android:id="@+id/backSlashTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backslash_symbol"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/movieRelaseDateTv"
            app:layout_constraintTop_toBottomOf="@id/movieNameTv"/>

        <TextView
            android:id="@+id/movieDurationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/one_h_33m"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@id/backSlashTv"
            app:layout_constraintTop_toBottomOf="@id/movieNameTv"/>


        <TextView
            android:id="@+id/movieOriginalLanguageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toEndOf="@id/posterImage"
            app:layout_constraintTop_toBottomOf="@id/movieRelaseDateTv"
            tools:text="Indonesian" />

        <TextView
            android:id="@+id/backSlash2Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/backslash_symbol"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toEndOf="@id/movieOriginalLanguageTv"
            app:layout_constraintTop_toBottomOf="@id/backSlashTv" />

        <ImageView
            android:id="@+id/starImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:src="@drawable/ic_baseline_star"
            app:layout_constraintStart_toEndOf="@id/backSlash2Tv"
            app:layout_constraintTop_toBottomOf="@id/movieDurationTv"
            android:contentDescription="@string/this_is_star_image" />

        <TextView
            android:id="@+id/movieRatingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/starImage"
            app:layout_constraintTop_toBottomOf="@id/movieDurationTv"
            tools:text="@string/seventy_one_percent" />

        <ImageButton
            android:id="@+id/movieRemoveFavoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>